fix scrollbar bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1211,6 +1211,7 @@ button.close:focus {
     margin-top: 5px;
     border: 1px solid #42A5F5;
     background-color: #fff;
+    z-index: 999;
 }
 
 #SidebarAffix.affix {
